--- a/index.html
+++ b/index.html
@@ -18,6 +18,46 @@
   </head>
   <body>
     <div class="main container-fluid">
+      <nav class="navbar navbar-default  navbar-fixed-top">
+        <div class="container-fluid">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="index.html">ylucky</a>
+          </div>
+
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+              <!-- <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">网站集锦<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="web/web02/index.html" target="_blank">VOYAGE</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="web/blog/index.html" target="_blank">MY RESUMR</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="web/fruits/index.html" target="_blank">CANDY</a></li>
+                </ul>
+              </li> -->
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">小案例集锦<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="list1.html" target="_blank">第一章 表单常用代码</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="list2.html" target="_blank">第二章 css3小特效</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="list3.html" target="_blank">第三章 轮播</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+      </nav>
       <div class="header">
         <img src="img/banner.jpg" alt="banner">
       </div>
