--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                   <li><a href="list2.html" target="_blank">第二章 css3小特效</a></li>
                   <li role="separator" class="divider"></li>
                   <li><a href="list3.html" target="_blank">第三章 轮播</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="list4.html" target="_blank">第四章 妙味课堂</a></li>
                 </ul>
               </li>
             </ul>
