--- a/list4.html
+++ b/list4.html
@@ -57,6 +57,7 @@
         <dl class="sub-dl">
             <dd><a href="e/16/index.html" target="_blank" title="DIV设置样式">DIV设置样式</a></dd>
             <dd><a href="e/17/index.html" target="_blank" title="模拟手机短信">模拟手机短信</a></dd>
+            <dd><a href="e/18/index.html" target="_blank" title="图片切换">图片切换</a></dd>
         </dl>
       </li>
     </ul>
