--- a/e/16/index.html
+++ b/e/16/index.html
@@ -184,7 +184,7 @@ window.onload = function(){
   		}
   }
 
-  function setStyle(item,){
+  function setStyle(item){
   	for (var i = 0; i < item.children.length; i++) {
   		item.children[i].index = i;
   		item.children[i].onclick = function(){
