--- a/e/19/index.html
+++ b/e/19/index.html
@@ -21,6 +21,9 @@
 			background-color: #eee;
 			position: relative;
 			margin-bottom: 10px;
+			background:#eee url(../../img/people.jpeg) no-repeat;
+			background-size: cover;
+			border:solid 1px #eee;
 		}
 		.content figcaption i{
 			position: absolute;
@@ -106,7 +109,7 @@
 			display: inline-block;
 			width: 0;
 			height: 0;
-			border-top: 10px solid #f30;
+			border-top: 10px solid #1198F8;
 			border-left: 5px solid transparent;
 			border-right: 5px solid transparent;
 		}
@@ -117,7 +120,6 @@
 		}
 		.effect img{
 			display: inline-block;
-			/* width: 200px; */
 		}
 	</style>
 </head>
