--- a/list4.html
+++ b/list4.html
@@ -59,6 +59,7 @@
             <dd><a href="e/17/index.html" target="_blank" title="模拟手机短信">模拟手机短信</a></dd>
             <dd><a href="e/18/index.html" target="_blank" title="图片切换">图片切换</a></dd>
             <dd><a href="e/19/index.html" target="_blank" title="鼠标滑动显示隐藏">鼠标滑动显示隐藏</a></dd>
+            <dd><a href="e/20/index.html" target="_blank" title="生成li">生成li</a></dd>
         </dl>
       </li>
     </ul>
