--- a/list4.html
+++ b/list4.html
@@ -60,6 +60,7 @@
             <dd><a href="e/18/index.html" target="_blank" title="图片切换">图片切换</a></dd>
             <dd><a href="e/19/index.html" target="_blank" title="鼠标滑动显示隐藏">鼠标滑动显示隐藏</a></dd>
             <dd><a href="e/20/index.html" target="_blank" title="生成li">生成li</a></dd>
+            <dd><a href="e/21/index.html" target="_blank" title="自动生成V字型">自动生成V字型</a></dd>
         </dl>
       </li>
     </ul>
