--- a/e/21/index.html
+++ b/e/21/index.html
@@ -20,7 +20,7 @@
 		.effect{
 			position: fixed;
 			left: 50%;
-			top:50px;
+			top:0px;
 		}
 		.effect img{
 			display: inline-block;
@@ -40,7 +40,7 @@
 	</div>
 
 	<div class="effect">
-		<span>效果图：</span>
+		<h2>效果图：</h2>
 		自动生成V字型-只能用定位实现（基础版）
 		<img src="1.gif" alt="1">
 		<br>
