--- a/list4.html
+++ b/list4.html
@@ -61,6 +61,7 @@
             <dd><a href="e/19/index.html" target="_blank" title="鼠标滑动显示隐藏">鼠标滑动显示隐藏</a></dd>
             <dd><a href="e/20/index.html" target="_blank" title="生成li">生成li</a></dd>
             <dd><a href="e/21/index.html" target="_blank" title="自动生成V字型">自动生成V字型</a></dd>
+            <dd><a href="e/22/index.html" target="_blank" title="QQ列表展开收缩扩展">QQ列表展开收缩扩展</a></dd>
         </dl>
       </li>
     </ul>
