--- a/list4.html
+++ b/list4.html
@@ -62,6 +62,7 @@
             <dd><a href="e/20/index.html" target="_blank" title="生成li">生成li</a></dd>
             <dd><a href="e/21/index.html" target="_blank" title="自动生成V字型">自动生成V字型</a></dd>
             <dd><a href="e/22/index.html" target="_blank" title="QQ列表展开收缩扩展">QQ列表展开收缩扩展</a></dd>
+            <dd><a href="e/23/index.html" target="_blank" title="带缩略图的图片切换效果">带缩略图的图片切换效果</a></dd>
         </dl>
       </li>
     </ul>
