--- a/list4.html
+++ b/list4.html
@@ -63,6 +63,7 @@
             <dd><a href="e/21/index.html" target="_blank" title="自动生成V字型">自动生成V字型</a></dd>
             <dd><a href="e/22/index.html" target="_blank" title="QQ列表展开收缩扩展">QQ列表展开收缩扩展</a></dd>
             <dd><a href="e/23/index.html" target="_blank" title="带缩略图的图片切换效果">带缩略图的图片切换效果</a></dd>
+            <dd><a href="e/24/index.html" target="_blank" title="控制多组图片切换">控制多组图片切换</a></dd>
         </dl>
       </li>
     </ul>
