--- a/list4.html
+++ b/list4.html
@@ -65,6 +65,8 @@
             <dd><a href="e/23/index.html" target="_blank" title="带缩略图的图片切换效果">带缩略图的图片切换效果</a></dd>
             <dd><a href="e/24/index.html" target="_blank" title="控制多组图片切换">控制多组图片切换</a></dd>
             <dd><a href="e/25/index.html" target="_blank" title="数据类型与类型转换">数据类型与类型转换</a></dd>
+            <!-- <dd><a href="e/26/index.html" target="_blank" title="商品加减与统计结果">商品加减与统计结果(bug)</a></dd>
+            <dd><a href="e/27/index.html" target="_blank" title="搜狐视频记录片列表展示">搜狐视频记录片列表展示(bug)</a></dd> -->
         </dl>
       </li>
     </ul>
