--- a/list2.html
+++ b/list2.html
@@ -53,8 +53,9 @@
       <li>
         <h3>第二章 css3小特效</h3>
         <dl class="sub-dl">
-            <dd><a href="e/8/index.html" title="限制字符串长度">css33中方式画六边形</a></dd>
+            <dd><a href="e/8/index.html" title="限制字符串长度">css33种方式画六边形</a></dd>
             <dd><a href="e/9/flex.html" title="限制字符串长度">flex画骰子</a></dd>
+            <dd><a href="e/css3/03/index.html" title="css3画五角星">css3画五角星</a></dd>
         </dl>
       </li>
 		</ul>
