--- a/list4.html
+++ b/list4.html
@@ -70,6 +70,7 @@
             <dd><a href="e/28/index.html" target="_blank" title="选择卡里套选择卡">选择卡里套选择卡</a></dd>
             <dd><a href="e/29/index.html" target="_blank" title="百度文库评分">百度文库评分</a></dd> -->
             <dd><a href="e/30/index.html" target="_blank" title="百度音乐-全选操作">百度音乐-全选操作</a></dd>
+            <dd><a href="e/31/index.html" target="_blank" title="淘宝商品广告效果">淘宝商品广告效果</a></dd>
         </dl>
       </li>
     </ul>
