--- a/e/26/index.html
+++ b/e/26/index.html
@@ -7,14 +7,14 @@
 <body>
 	<h2>实时显示商品加减与统计结果</h2>
 <ul id="list">
-	<li>
-  	<input type="button" value="-" />
-    <strong>0</strong>
-  	<input type="button" value="+" />
-    单价：<em>12.5元</em>
-    小计：<span>0元</span>
-  </li>
- <li>
+		<li>
+		  	<input type="button" value="-" />
+		    <strong>0</strong>
+		  	<input type="button" value="+" />
+		    单价：<em>12.5元</em>
+		    小计：<span>0元</span>
+		  </li>
+	 <li>
 	  	<input type="button" value="-" />
 	    <strong>0</strong>
 	  	<input type="button" value="+" />
@@ -52,22 +52,18 @@
 <script>
 window.onload = function () {
 	var oUl = document.getElementById('list');
-	var oSummary = document.getElementById('summary');
 	var aLi = oUl.getElementsByTagName('li');
+	var oSummary = document.getElementById('summary');
 	var aNum = [];
-	//aNum.length = 5;
 	var aPrice = [];
-	//aPrice.length = 5;
-	var aMax = null;
+	var aMax = 0;
 	var max = 0;	
-	// fnCount ( aLi[0] );
 	for ( var i=0; i<aLi.length; i++ ) {
 		aLi[i].index = i;
 		fnCount ( aLi[i],i);
 	}
 	
 	function fnCount (li,index) {
-		console.log("index",index);
 		var aBtn = li.getElementsByTagName ('input');
 		var oStrong = li.getElementsByTagName ('strong')[0];
 		var oEm = li.getElementsByTagName ('em')[0];
@@ -82,40 +78,42 @@ window.onload = function () {
 			oStrong.innerHTML = n;
 			oSpan.innerHTML = n*price + '元';
 			aNum[index]=n;
-			aPrice.splice(index,1,n*price);
+			aPrice[index]=n*price;
 			fnSummary(aNum,aPrice,index);	
 		};
 		aBtn[1].onclick = function () {
-			console.log("click",index);
 			n++;
 			oStrong.innerHTML = n;
 			oSpan.innerHTML = n*price + '元';
-			aNum.splice(index,1,n);
-			aPrice.splice(index,1,n*price);
+			aNum[index]=n;
+			aPrice[index]=n*price;
 			fnSummary(aNum,aPrice,index);	
-			console.log(aNum,aPrice);
 		};
 	}
 
 	function fnSummary(aNum,aPrice,index){
 		var num1 = 0;
-		var num2 = 0;
+		var amount = 0;
 		for (let i = 0; i < aNum.length; i++) {
+			if(isNaN(aNum[i])){
+				aNum[i] = 0;
+			}
 			num1 += parseFloat(aNum[i]);//件数
 		}
-		console.log("num1",num1);
 		//初始值
 		aMax = aPrice[index];
-		max =aNum[index]==0?0:aPrice[index]/aNum[index];
+		max = aMax;
 		for (let i = 0; i < aPrice.length; i++) {
-			num2 += aPrice[i];//总价
-			if(aMax<aPrice[i]&&aNum[i]!=0){
+			if(isNaN(aPrice[i])){
+				aPrice[i] = 0;
+			}
+			amount += parseFloat(aPrice[i]);//总价
+			if(aMax<=aPrice[i]&&aNum[i]!=0){
 				aMax = aPrice[i];
 				max =aPrice[i]/aNum[i];//最贵单价
-				console.log("111")
 			}
 		}
-		oSummary.innerHTML ='商品合计共：'+num1+'件，共花费了：'+num2 + '元<br>其中最贵的商品单价是：'+max;
+		oSummary.innerHTML ='商品合计共：'+num1+'件，共花费了：'+amount + '元<br>其中最贵的商品单价是：'+max+'元';
 	}
 };
 </script>	
