--- a/list4.html
+++ b/list4.html
@@ -55,22 +55,23 @@
       <li>
         <h3>第四章 妙味课堂js</h3>
         <dl class="sub-dl">
-            <dd><a href="e/16/index.html" target="_blank" title="DIV设置样式">DIV设置样式</a></dd>
-            <dd><a href="e/17/index.html" target="_blank" title="模拟手机短信">模拟手机短信</a></dd>
-            <dd><a href="e/18/index.html" target="_blank" title="图片切换">图片切换</a></dd>
-            <dd><a href="e/19/index.html" target="_blank" title="鼠标滑动显示隐藏">鼠标滑动显示隐藏</a></dd>
-            <dd><a href="e/20/index.html" target="_blank" title="生成li">生成li</a></dd>
-            <dd><a href="e/21/index.html" target="_blank" title="自动生成V字型">自动生成V字型</a></dd>
-            <dd><a href="e/22/index.html" target="_blank" title="QQ列表展开收缩扩展">QQ列表展开收缩扩展</a></dd>
-            <dd><a href="e/23/index.html" target="_blank" title="带缩略图的图片切换效果">带缩略图的图片切换效果</a></dd>
-            <dd><a href="e/24/index.html" target="_blank" title="控制多组图片切换">控制多组图片切换</a></dd>
-            <dd><a href="e/25/index.html" target="_blank" title="数据类型与类型转换">数据类型与类型转换</a></dd>
-            <dd><a href="e/26/index.html" target="_blank" title="商品加减与统计结果">商品加减与统计结果</a></dd>
+            <dd><a href="e/16/index.html" target="_blank" title="DIV设置样式">1.DIV设置样式</a></dd>
+            <dd><a href="e/17/index.html" target="_blank" title="模拟手机短信">2.模拟手机短信</a></dd>
+            <dd><a href="e/18/index.html" target="_blank" title="图片切换">3.图片切换</a></dd>
+            <dd><a href="e/19/index.html" target="_blank" title="鼠标滑动显示隐藏">4.鼠标滑动显示隐藏</a></dd>
+            <dd><a href="e/20/index.html" target="_blank" title="生成li">5.生成li</a></dd>
+            <dd><a href="e/21/index.html" target="_blank" title="自动生成V字型">6.自动生成V字型</a></dd>
+            <dd><a href="e/22/index.html" target="_blank" title="QQ列表展开收缩扩展">7.QQ列表展开收缩扩展</a></dd>
+            <dd><a href="e/23/index.html" target="_blank" title="带缩略图的图片切换效果">8.带缩略图的图片切换效果</a></dd>
+            <dd><a href="e/24/index.html" target="_blank" title="控制多组图片切换">9.控制多组图片切换</a></dd>
+            <dd><a href="e/25/index.html" target="_blank" title="数据类型与类型转换">10.数据类型与类型转换</a></dd>
+            <dd><a href="e/26/index.html" target="_blank" title="商品加减与统计结果">11.商品加减与统计结果</a></dd>
             <!-- <dd><a href="e/27/index.html" target="_blank" title="搜狐视频记录片列表展示">搜狐视频记录片列表展示(bug)</a></dd>
             <dd><a href="e/28/index.html" target="_blank" title="选择卡里套选择卡">选择卡里套选择卡</a></dd>
             <dd><a href="e/29/index.html" target="_blank" title="百度文库评分">百度文库评分</a></dd> -->
-            <dd><a href="e/30/index.html" target="_blank" title="百度音乐-全选操作">百度音乐-全选操作</a></dd>
-            <dd><a href="e/31/index.html" target="_blank" title="淘宝商品广告效果">淘宝商品广告效果</a></dd>
+            <dd><a href="e/30/index.html" target="_blank" title="百度音乐-全选操作">12.百度音乐-全选操作</a></dd>
+            <dd><a href="e/31/index.html" target="_blank" title="淘宝商品广告效果">13.淘宝商品广告效果</a></dd>
+            <dd><a href="e/36/index.html" target="_blank" title="文字搬运工">14.文字搬运工</a></dd>
         </dl>
       </li>
     </ul>
