--- a/e/27/index.html
+++ b/e/27/index.html
@@ -137,7 +137,7 @@
 								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
 							</figure>
 						</li> -->
-						<li><i>1</i>1习近平定调2018中国经济，要干这些大事</li>
+						<li><i>1</i>1</li>
 						<li><i>2</i>习近平新时代中国特色社会主义经济思想引发热议</li>
 						<li><i>3</i>牢牢把握高质量发展这个根本要求</li>
 						<li><i>4</i>开放透明 同中国合作大有可为  新时代新气象新作为</li>
@@ -152,7 +152,7 @@
 				</section>
 				<section style="display: none;">
 					<ol>
-						<li><i>1</i>2习近平定调2018中国经济，要干这些大事</li>
+						<li><i>1</i>2</li>
 						<li><i>2</i>习近平新时代中国特色社会主义经济思想引发热议</li>
 						<li><i>3</i>牢牢把握高质量发展这个根本要求</li>
 						<li><i>4</i>开放透明 同中国合作大有可为  新时代新气象新作为</li>
@@ -167,7 +167,7 @@
 				</section>
 				<section style="display: none;">
 					<ol>
-						<li><i>1</i>3习近平定调2018中国经济，要干这些大事</li>
+						<li><i>1</i>3</li>
 						<li><i>2</i>习近平新时代中国特色社会主义经济思想引发热议</li>
 						<li><i>3</i>牢牢把握高质量发展这个根本要求</li>
 						<li><i>4</i>开放透明 同中国合作大有可为  新时代新气象新作为</li>
@@ -212,11 +212,11 @@
 			var timer = null;
 			for (var i = 0; i < aLi.length; i++) {
 				aLi[i].index = i;
-				timer = setInterval(function(aLi[i].onmouseover = function(){
+				aLi[i].onmouseover = function(){
 					old = this.innerHTML;
 					this.className = 'hover';
 					this.innerHTML = '<i>'+(this.index+1)+'</i>'+str;
-				}),100);
+				};
 				aLi[i].onmouseout = function(){
 					this.className = '';
 					this.innerHTML = old;
