--- a/list4.html
+++ b/list4.html
@@ -72,7 +72,7 @@
             <dd><a href="e/30/index.html" target="_blank" title="百度音乐-全选操作">12.百度音乐-全选操作</a></dd>
             <dd><a href="e/31/index.html" target="_blank" title="淘宝商品广告效果">13.淘宝商品广告效果</a></dd>
             <dd><a href="e/36/index.html" target="_blank" title="文字搬运工">14.文字搬运工</a></dd>
-            <!-- <dd><a href="e/37/index.html" target="_blank" title="查找、替换、删除">15.查找、替换、删除</a></dd> -->
+            <dd><a href="e/37/index.html" target="_blank" title="查找、替换、删除">15.查找、替换、删除</a></dd>
         </dl>
       </li>
     </ul>
