--- a/list4.html
+++ b/list4.html
@@ -77,7 +77,7 @@
               </ul>
             </dd>
             <dd><h5>JS5-函数传参</h5></dd>
-            <!-- <dd><a href="e/05/01/index.html" target="_blank" title="修改文本框的值">11.修改文本框的值</a></dd> -->
+            <dd><a href="e/05/01/index.html" target="_blank" title="修改文本框的值">11.修改文本框的值</a></dd>
             <dd><a href="e/26/index.html" target="_blank" title="商品加减与统计结果">12.商品加减与统计结果</a></dd>
 
             <!-- <dd><a href="e/27/index.html" target="_blank" title="搜狐视频记录片列表展示">搜狐视频记录片列表展示(bug)</a></dd>
