--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
                   <li><a href="list4.html" target="_blank">第四章 妙味课堂</a></li>
                 </ul>
               </li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">js小游戏<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="e/game/01.html" target="_blank">js+canvas时钟</a></li>
+                  <li><a href="e/game/02.html" target="_blank">js+canvas五子棋</a></li>
+                </ul>
+              </li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
