--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </ul>
               </li>
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">js小游戏<span class="caret"></span></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">canvas<span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="e/game/01.html" target="_blank">js+canvas时钟</a></li>
                   <li><a href="e/game/02.html" target="_blank">js+canvas五子棋</a></li>
