--- a/e/27/index.html
+++ b/e/27/index.html
@@ -62,6 +62,9 @@
 			cursor: pointer;
 			overflow: hidden;
 		}
+		ol li i,ol li span{
+			float: left;
+		}
 		a{
 			float: right;
 			font-size: 12px;
@@ -70,21 +73,10 @@
 		.cur{
 			background-color: #fff;
 		}
-		.hover{
-			background-color: #fff;
-			height: 100px;
-			padding: 10px 0px;
-
+		figure{
+			display: none;
 		}
-		.hover figure{
-			margin:0px;
-			display: inline-block;
-			float: left;
-		}
-		.hover i{
-			float: left;
-		}
-		.hover img{
+		figure img{
 			display: inline-block;
 			width: 80px;
 			height: 80px;
@@ -93,11 +85,11 @@
 			padding: 3px;
 			border:solid 1px #8291D4;
 		}
-		.hover figcaption{
+		figcaption{
 			width: 50%;
 			float: left;
 			line-height: 20px;
-		}
+		} 
 		button{
 			display: block;
 			float: right;
@@ -137,46 +129,136 @@
 								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
 							</figure>
 						</li> -->
-						<li><i>1</i>1</li>
-						<li><i>2</i>习近平新时代中国特色社会主义经济思想引发热议</li>
-						<li><i>3</i>牢牢把握高质量发展这个根本要求</li>
-						<li><i>4</i>开放透明 同中国合作大有可为  新时代新气象新作为</li>
-						<li><i>5</i>雄安新区将重点发展高端高新产业 打造科技新城</li>
-						<li><i>6</i>2018高考大纲稳中微调 细微变化体现选才导向</li>
-						<li><i>7</i>11月全国社会消费品零售总额3.41万亿元,同比增10.2%</li>
-						<li><i>8</i>商务部：中国从未、也永远不会实行“经济侵略”</li>
-						<li><i>9</i>三部门:安全生产责任保险每死一人按不低于30万赔偿</li>
-						<li><i>10</i>最高领导人3年前的提法，今年底悄然变化</li>
+						<li><i>1</i><span>1每日</span><figure>
+								<img src="../../img/people.jpeg" alt="people">
+								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
+							</figure></li>
+						<li><i>2</i><span>每日习近平新时代中国特色社会主义经济思想引发热议</span><figure>
+								<img src="../../img/people.jpeg" alt="people">
+								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
+							</figure></li>
+						<li><i>3</i><span>每日牢牢把握高质量发展这个根本要求</span><figure>
+								<img src="../../img/people.jpeg" alt="people">
+								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
+							</figure></li>
+						<li><i>4</i><span>每日开放透明 同中国合作大有可为  新时代新气象新作为</span><figure>
+								<img src="../../img/people.jpeg" alt="people">
+								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
+							</figure></li>
+						<li><i>5</i><span>每日雄安新区将重点发展高端高新产业 打造科技新城</span><figure>
+								<img src="../../img/people.jpeg" alt="people">
+								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
+							</figure></li>
+						<li><i>6</i><span>每日2018高考大纲稳中微调 细微变化体现选才导向</span><figure>
+								<img src="../../img/people.jpeg" alt="people">
+								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
+							</figure></li>
+						<li><i>7</i><span>每日11月全国社会消费品零售总额3.41万亿元</span><figure>
+								<img src="../../img/people.jpeg" alt="people">
+								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
+							</figure></li>
+						<li><i>8</i><span>每日商务部：中国从未、也永远不会实行“经济侵略”</span><figure>
+								<img src="../../img/people.jpeg" alt="people">
+								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
+							</figure></li>
+						<li><i>9</i><span>每日三部门:安全生产责任保险每死一人按不低于30万赔偿</span><figure>
+								<img src="../../img/people.jpeg" alt="people">
+								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
+							</figure></li>
+						<li><i>10</i><span>每日最高领导人3年前的提法，今年底悄然变化</span><figure>
+								<img src="../../img/people.jpeg" alt="people">
+								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
+							</figure></li>
 					</ol>
 					<a href="">更多&gt;&gt;</a>
 				</section>
 				<section style="display: none;">
 					<ol>
-						<li><i>1</i>2</li>
-						<li><i>2</i>习近平新时代中国特色社会主义经济思想引发热议</li>
-						<li><i>3</i>牢牢把握高质量发展这个根本要求</li>
-						<li><i>4</i>开放透明 同中国合作大有可为  新时代新气象新作为</li>
-						<li><i>5</i>雄安新区将重点发展高端高新产业 打造科技新城</li>
-						<li><i>6</i>2018高考大纲稳中微调 细微变化体现选才导向</li>
-						<li><i>7</i>11月全国社会消费品零售总额3.41万亿元,同比增10.2%</li>
-						<li><i>8</i>商务部：中国从未、也永远不会实行“经济侵略”</li>
-						<li><i>9</i>三部门:安全生产责任保险每死一人按不低于30万赔偿</li>
-						<li><i>10</i>最高领导人3年前的提法，今年底悄然变化</li>
+						<li><i>1</i><span>2每周</span><figure>
+								<img src="../../img/people.jpeg" alt="people">
+								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
+							</figure></li>
+						<li><i>2</i><span>每周习近平新时代中国特色社会主义经济思想引发热议</span><figure>
+								<img src="../../img/people.jpeg" alt="people">
+								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
+							</figure></li>
+						<li><i>3</i><span>每周牢牢把握高质量发展这个根本要求</span><figure>
+								<img src="../../img/people.jpeg" alt="people">
+								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
+							</figure></li>
+						<li><i>4</i><span>每周开放透明 同中国合作大有可为  新时代新气象新作为</span><figure>
+								<img src="../../img/people.jpeg" alt="people">
+								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
+							</figure></li>
+						<li><i>5</i><span>每周雄安新区将重点发展高端高新产业 打造科技新城</span><figure>
+								<img src="../../img/people.jpeg" alt="people">
+								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
+							</figure></li>
+						<li><i>6</i><span>每周2018高考大纲稳中微调 细微变化体现选才导向</span><figure>
+								<img src="../../img/people.jpeg" alt="people">
+								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
+							</figure></li>
+						<li><i>7</i><span>每周11月全国社会消费品零售总额3.41万亿元</span><figure>
+								<img src="../../img/people.jpeg" alt="people">
+								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
+							</figure></li>
+						<li><i>8</i><span>每周商务部：中国从未、也永远不会实行“经济侵略”</span><figure>
+								<img src="../../img/people.jpeg" alt="people">
+								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
+							</figure></li>
+						<li><i>9</i><span>每周三部门:安全生产责任保险每死一人按不低于30万赔偿</span><figure>
+								<img src="../../img/people.jpeg" alt="people">
+								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
+							</figure></li>
+						<li><i>10</i><span>每周最高领导人3年前的提法，今年底悄然变化</span><figure>
+								<img src="../../img/people.jpeg" alt="people">
+								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
+							</figure></li>
 					</ol>
 					<a href="">更多&gt;&gt;</a>
 				</section>
 				<section style="display: none;">
 					<ol>
-						<li><i>1</i>3</li>
-						<li><i>2</i>习近平新时代中国特色社会主义经济思想引发热议</li>
-						<li><i>3</i>牢牢把握高质量发展这个根本要求</li>
-						<li><i>4</i>开放透明 同中国合作大有可为  新时代新气象新作为</li>
-						<li><i>5</i>雄安新区将重点发展高端高新产业 打造科技新城</li>
-						<li><i>6</i>2018高考大纲稳中微调 细微变化体现选才导向</li>
-						<li><i>7</i>11月全国社会消费品零售总额3.41万亿元,同比增10.2%</li>
-						<li><i>8</i>商务部：中国从未、也永远不会实行“经济侵略”</li>
-						<li><i>9</i>三部门:安全生产责任保险每死一人按不低于30万赔偿</li>
-						<li><i>10</i>最高领导人3年前的提法，今年底悄然变化</li>
+						<li><i>1</i><span>3全部</span><figure>
+								<img src="../../img/people.jpeg" alt="people">
+								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
+							</figure></li>
+						<li><i>2</i><span>全部习近平新时代中国特色社会主义经济思想引发热议</span><figure>
+								<img src="../../img/people.jpeg" alt="people">
+								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
+							</figure></li>
+						<li><i>3</i><span>全部牢牢把握高质量发展这个根本要求</span><figure>
+								<img src="../../img/people.jpeg" alt="people">
+								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
+							</figure></li>
+						<li><i>4</i><span>全部开放透明 同中国合作大有可为  新时代新气象新作为</span><figure>
+								<img src="../../img/people.jpeg" alt="people">
+								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
+							</figure></li>
+						<li><i>5</i><span>全部雄安新区将重点发展高端高新产业 打造科技新城</span><figure>
+								<img src="../../img/people.jpeg" alt="people">
+								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
+							</figure></li>
+						<li><i>6</i><span>全部2018高考大纲稳中微调 细微变化体现选才导向</span><figure>
+								<img src="../../img/people.jpeg" alt="people">
+								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
+							</figure></li>
+						<li><i>7</i><span>全部11月全国社会消费品零售总额3.41万亿元</span><figure>
+								<img src="../../img/people.jpeg" alt="people">
+								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
+							</figure></li>
+						<li><i>8</i><span>全部商务部：中国从未、也永远不会实行“经济侵略”</span><figure>
+								<img src="../../img/people.jpeg" alt="people">
+								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
+							</figure></li>
+						<li><i>9</i><span>全部三部门:安全生产责任保险每死一人按不低于30万赔偿</span><figure>
+								<img src="../../img/people.jpeg" alt="people">
+								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
+							</figure></li>
+						<li><i>10</i><span>全部最高领导人3年前的提法，今年底悄然变化</span><figure>
+								<img src="../../img/people.jpeg" alt="people">
+								<figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption>
+							</figure></li>
 					</ol>
 					<a href="">更多&gt;&gt;</a>
 				</section>					
@@ -206,20 +288,22 @@
 					aSection[this.index].style.display = 'block';
 				}
 			}
+
+
 			var aLi = aSection[0].getElementsByTagName('li');
-			var str = '<figure><img src="../../img/people.jpeg" alt="people"><figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption></figure>';
+			//var str = '<figure><img src="../../img/people.jpeg" alt="people"><figcaption>中央经济工作会议20日在北京闭幕。<br><button>▷播放</button></figcaption></figure>';
 			var old = null;
 			var timer = null;
 			for (var i = 0; i < aLi.length; i++) {
 				aLi[i].index = i;
 				aLi[i].onmouseover = function(){
-					old = this.innerHTML;
-					this.className = 'hover';
-					this.innerHTML = '<i>'+(this.index+1)+'</i>'+str;
+					this.getElementsByTagName('span')[0].style.display = "none";
+					this.getElementsByTagName('figure')[0].style.display = "block";									
 				};
 				aLi[i].onmouseout = function(){
-					this.className = '';
-					this.innerHTML = old;
+					this.getElementsByTagName('span')[0].style.display = "block";
+					this.getElementsByTagName('figure')[0].style.display = "none";	
+					
 				}
 			}
 		}
