--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                   <li role="separator" class="divider"></li>
                   <li><a href="list3.html" target="_blank">第三章 轮播</a></li>
                   <li role="separator" class="divider"></li>
-                  <li><a href="list4.html" target="_blank">第四章 妙味课堂</a></li>
                 </ul>
               </li>
+              <li><a href="list4.html" target="_blank">妙味课堂js</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">canvas<span class="caret"></span></a>
                 <ul class="dropdown-menu">
