--- a/list4.html
+++ b/list4.html
@@ -76,11 +76,11 @@
                 <li>&nbsp;&nbsp;2.请输入QQ号码</li>
               </ul>
             </dd>
-            <dd><h5>JS5-函数传参</h5></dd>
+            <dd><h5>JS5-函数传参 OK</h5></dd>
             <dd><a href="e/05/01/index.html" target="_blank" title="修改文本框的值">11.修改文本框的值</a></dd>
             <dd><a href="e/26/index.html" target="_blank" title="商品加减与统计结果">12.商品加减与统计结果</a></dd>
             <dd><a href="e/27/index.html" target="_blank" title="搜狐视频记录片列表展示">13.搜狐视频记录片列表展示</a></dd>
-            <!-- <dd><a href="e/28/index.html" target="_blank" title="选择卡里套选择卡">选择卡里套选择卡</a></dd> -->
+            <dd><a href="e/28/index.html" target="_blank" title="选择卡里套选择卡">14.选择卡里套选择卡</a></dd>
             <dd><h5>JS6-作用域</h5></dd>
             <dd><h5>JS7-运算符、流程控制</h5></dd>
             <!--<dd><a href="e/29/index.html" target="_blank" title="百度文库评分">百度文库评分</a></dd> -->
