--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                   <li><a href="e/game/02.html" target="_blank">js+canvas五子棋</a></li>
                 </ul>
               </li>
+              <li><a href="list5.html" target="_blank">我的画画</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
