--- a/list4.html
+++ b/list4.html
@@ -81,10 +81,10 @@
             <dd><a href="e/26/index.html" target="_blank" title="商品加减与统计结果">12.商品加减与统计结果</a></dd>
             <dd><a href="e/27/index.html" target="_blank" title="搜狐视频记录片列表展示">13.搜狐视频记录片列表展示</a></dd>
             <dd><a href="e/28/index.html" target="_blank" title="选择卡里套选择卡">14.选择卡里套选择卡</a></dd>
-            <dd><h5>JS6-作用域</h5></dd>
-            <dd><h5>JS7-运算符、流程控制</h5></dd>
-            <!--<dd><a href="e/29/index.html" target="_blank" title="百度文库评分">百度文库评分</a></dd> -->
-            <dd><a href="e/30/index.html" target="_blank" title="百度音乐-全选操作">12.百度音乐-全选操作</a></dd>
+            <dd><h5>JS6-作用域 空</h5></dd>
+            <dd><h5>JS7-运算符、流程控制 OK</h5></dd>
+            <dd><a href="e/29/index.html" target="_blank" title="百度文库评分">15.百度文库评分</a></dd>
+            <dd><a href="e/30/index.html" target="_blank" title="百度音乐-全选操作">16.百度音乐-全选操作</a></dd>
             <dd><h5>JS8-函数返回值、定时器基础</h5></dd>
             <dd><a href="e/31/index.html" target="_blank" title="淘宝商品广告效果">13.淘宝商品广告效果</a></dd>
             <dd><h5>JS9-定时器管理、函数封装</h5></dd>
